# ghwf

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
plans/: 1-basic-workflow.md  10-helper-to-install-update-global-work-on-slash-command.md  101-establish-ghwf-instructions-and-relayed-github-comments-as-authoritative-via-an-onboarding-subcommand.md  103-full-review-and-audit.md  104-reconsider-a-compaction-durable-anchor-for-the-onboarding-authoritative-trust-framing.md  107-detect-merge-conflicts-at-hand-off-and-consider-auto-rebasing-onto-main.md  108-acknowledge-an-approval-directive-reaction-immediately-when-it-registers.md  109-normalize-labels-when-a-pr-is-merged-without-a-follow-up-work-on.md  110-re-sync-labels-attention-state-after-a-crashed-or-killed-session.md  111-verify-ghwf-s-own-write-subcommands-aren-t-blocked-as-external-writes-mid-session.md  112-smoke-test-the-live-write-shutdown-paths-that-shipped-on-unit-test-confidence.md  113-add-convert-subcommand-to-convert-a-non-bare-repo-into-our-preferred-layout.md  117-make-state-persistence-atomic-and-race-safe.md  118-consolidate-work-on-to-a-single-durable-save-checkpoint-directive-consumption.md  12-pull-request-templates-instruction-files.md  13-pass-no-branch-and-other-flags-through-from-outer-ghwf-to-inner-ghwf.md  135-graceful-shutdown-for-forever-command.md  136-suspected-bug-in-convert-command.md  139-some-way-to-instruct-a-forever-process-to-relaunch-itself-at-the-end-of-the-current-workflow.md  14-collect-garbage-subcommand.md  15-ghwf-next-subcommand.md  (+49 more)
src/: access.rs  (+30 more)
(+1 files in other folders)
