[package]
name = "ghwf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.3"
toml = "0.8"
inquire = "0.9.4"
toml_edit = "0.22"

# The supervisor's signal handling (ignoring SIGINT while a session runs, and
# the shutdown gesture for `next --forever`) is Unix-only.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
